crates/analyzer/tests/snapshots/errors__unit_type_constructor.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `()` type is not callable
  ┌─ [snippet]:3:3
  │
3 │   ()()
  │   ^^ this has type `()`


